# AumDB

./: CMakeLists.txt  README.md  config.json
doc/seq_diag/: boot.md  create_table.md  design_patterns.md  insert.md
include/aumdb/: db.h
include/aumdb/core/: btree_index.h  buffer.h  catalog.h  engine.h  hash_defintion.h  heap.h  index.h  page.h  util.h
seq_diag/: create_table.md
src/: db.cpp  main.cpp
src/core/: catalog.cpp  engine.cpp  heap.cpp  util.cpp
tests/: CMakeLists.txt  db_tests.cpp
tools/: heap_reader.py
